<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@drawable/button2_bg"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/id_ll_scan"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/id_iv_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/scan_icon_pressed" />

            <TextView
                android:id="@+id/id_tv_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_str"
                android:textColor="#AF7C2E"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_ll_retrieve"
            android:layout_width="3dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button2_bg"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/id_iv_retrieve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/retrieve_icon_unpressed" />

            <TextView
                android:id="@+id/id_tv_retrieve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_retrieve"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_ll_check"
            android:layout_width="3dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button2_bg"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/id_iv_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/check_icon_unpressed" />

            <TextView
                android:id="@+id/id_tv_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_check"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_ll_settings"
            android:layout_width="3dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button2_bg"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/id_iv_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/settings_icon_unpressed" />

            <TextView
                android:id="@+id/id_tv_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_settings"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>