<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background" >

    <com.example.assertmanager.view.TopBar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </com.example.assertmanager.view.TopBar>

    <LinearLayout
        android:id="@+id/common_use_ll"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/zc_baofei_flag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="报废"
                android:textColor="@color/white" />

            <CheckBox
                android:id="@+id/zc_tiaozheng_flag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="调整"
                android:textColor="@color/white" />

            <CheckBox
                android:id="@+id/zc_tiaoma_flag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="条码"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/common_use_ll"
        android:layout_below="@id/topbar" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/zc_item_height"
                android:layout_marginTop="20dp"
                android:background="@drawable/green_border_no_side_bg"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/zc_mx_margin"
                    android:text="@string/zc_bh"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/zc_bh_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/zc_mx_margin"
                    android:ellipsize="middle"
                    android:maxWidth="200dp"
                    android:singleLine="true"
                    android:textColor="@color/light_white_text_color" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/green_border_no_side_bg"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zc_item_height"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/zc_mx_margin"
                        android:text="@string/zc_km"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/zc_km_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/zc_mx_margin"
                        android:textColor="@color/light_white_text_color" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/zc_mx_margin"
                    android:layout_marginRight="@dimen/zc_mx_margin"
                    android:background="@drawable/green_divider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zc_item_height"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/zc_mx_margin"
                        android:text="@string/zc_mc"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/zc_mc_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/zc_mx_margin"
                        android:textColor="@color/light_white_text_color" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/zc_mx_margin"
                    android:layout_marginRight="@dimen/zc_mx_margin"
                    android:background="@drawable/green_divider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zc_item_height"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/zc_mx_margin"
                        android:text="@string/zc_ggxh"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/zc_ggxh_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/zc_mx_margin"
                        android:textColor="@color/light_white_text_color" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/zc_mx_margin"
                    android:layout_marginRight="@dimen/zc_mx_margin"
                    android:background="@drawable/green_divider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zc_item_height"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/zc_mx_margin"
                        android:text="@string/zc_mxxglbm"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/zc_mxxglbm_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/zc_mx_margin"
                        android:textColor="@color/light_white_text_color" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/zc_mx_margin"
                    android:layout_marginRight="@dimen/zc_mx_margin"
                    android:background="@drawable/green_divider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zc_item_height"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/zc_mx_margin"
                        android:text="@string/zc_sybm"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/zc_mxsybm_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/zc_mx_margin"
                        android:textColor="@color/light_white_text_color" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/zc_mx_margin"
                    android:layout_marginRight="@dimen/zc_mx_margin"
                    android:background="@drawable/green_divider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zc_item_height"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/zc_mx_margin"
                        android:text="@string/zc_dj"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/zc_dj_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/zc_mx_margin"
                        android:textColor="@color/light_white_text_color" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/zc_mx_margin"
                    android:layout_marginRight="@dimen/zc_mx_margin"
                    android:background="@drawable/green_divider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zc_item_height"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/zc_mx_margin"
                        android:text="@string/zc_bgr"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/zc_bgr_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/zc_mx_margin"
                        android:textColor="@color/light_white_text_color" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/green_border_no_side_bg"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zc_item_height"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/zc_mx_margin"
                        android:text="@string/zc_zy"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/zc_zy_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/zc_mx_margin"
                        android:textColor="@color/light_white_text_color" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/zc_mx_margin"
                    android:layout_marginRight="@dimen/zc_mx_margin"
                    android:background="@drawable/green_divider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zc_item_height"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/zc_mx_margin"
                        android:text="@string/zc_mxsyzk"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/zc_syzk_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/zc_mx_margin"
                        android:textColor="@color/light_white_text_color" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>