<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xf="http://schemas.android.com/apk/res/com.example.myqr_codescan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background" >

    <com.example.assertmanager.view.TopBar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.example.assertmanager.view.SelectionBar
        android:layout_below="@id/topbar"
        android:id="@+id/selectionbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        xf:flag="check"
        ></com.example.assertmanager.view.SelectionBar>

    <!-- 数目信息 -->

    <LinearLayout
        android:id="@+id/top_info"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/selectionbar"
        android:background="@drawable/check_main_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/number_info_rl"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_below="@id/selectionbar"
            android:background="#16161B"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/matct_condition_num_promt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/zc_mx_margin"
                android:text="@string/str_match_condition"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/matct_condition_num_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/matct_condition_num_promt"
                android:textColor="@color/orange_text_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/totol_num_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/zc_mx_margin"
                android:textColor="@color/orange_text_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/totol_num_promt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@id/totol_num_tv"
                android:text="共有物品:"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/divider" />

        <!-- 筛选信息 -->

        <RelativeLayout
            android:id="@+id/filter_info_rl"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:background="#16161B"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/filter_condition_promt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/zc_mx_margin"
                android:text="使用部门:"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/filter_condition_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/filter_condition_promt"
                android:textColor="@color/orange_text_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/check_num_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/zc_mx_margin"
                android:textColor="@color/orange_text_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/check_num_promt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@id/check_num_tv"
                android:text="清查:"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/get_way_ll"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:background="@drawable/check_main_bg"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/shepin_btn"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="1dp"
                android:background="@drawable/button1_bg"
                android:text="@string/shepin_str"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/laser_btn"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:background="@drawable/button1_bg"
                android:text="@string/laser_check"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/tiaoma_btn"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:background="@drawable/button1_bg"
                android:text="@string/tiaoma_scan_str"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/shougong_btn"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/button1_bg"
                android:text="@string/shoudong_str"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <com.example.assertmanager.view.LoadListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/get_way_ll"
        android:layout_below="@id/top_info" />

</RelativeLayout>